--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.28</slf4j.version>
+
+        <!--        disable web.xml-->
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
     <build>
@@ -33,6 +36,9 @@
                     <source>9</source>
                     <target>9</target>
                 </configuration>
+                <!--                <configuration>-->
+                <!--                    <failOnMissingWebXml>false</failOnMissingWebXml>-->
+                <!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
@@ -67,11 +73,31 @@
             <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet.jsp/javax.servlet.jsp-api -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+        <dependency>
+            <groupId>org.apache.taglibs</groupId>
+            <artifactId>taglibs-standard-impl</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 
     <profiles>
     </profiles>
-
     <dependencyManagement>
     </dependencyManagement>
 </project>
