--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
                 <!--                <configuration>-->
                 <!--                    <failOnMissingWebXml>false</failOnMissingWebXml>-->
